# ztbrowser

./: .gitignore  AGENTS.md  AWS-DEPLOY.md  README.md  clientsidechecker.ts  exampleserver.ts  package-lock.json  package.json  prd.json  tsconfig.json  vitest.config.mjs
.github/workflows/: ci.yml
.run/: Dev checker.run.xml  Dev deploy tui.run.xml  Dev example.run.xml  Dev facts.run.xml  Smoke API.run.xml  Test unit coverage.run.xml  Test unit.run.xml  Typecheck.run.xml  ZTDeploy init.run.xml  ZTDeploy validate.run.xml
aws-deploy/: README.md  measurements.example.json  provenance.example.json
aws-deploy/enclave-server/: Cargo.toml  Dockerfile
aws-deploy/parent-proxy/: Cargo.toml
aws-deploy/parent-proxy/src/: main.rs
chrome-extension/: package-lock.json  package.json  tsconfig.json
chrome-extension/src/: background.ts
chrome-extension/webpack/: webpack.config.js
demo-service-repo/: Dockerfile  README.md  exampleserver.ts  package.json  server.js
demo-service-repo/demo-pki/: leaf-key.pem
deploy/: catalog.yml
docs/: nitro-aws-current-architecture-deck.md  nitro-demo-architecture-deck.md
facts-node/: Dockerfile  facts-db.json  factsDb.ts  package.json  server.ts
micrus/: .env.example  Dockerfile  README.md  demo.py  pyproject.toml
scripts/: aws-build-enclave.sh  aws-prepare-parent.sh  aws-run-coco-wrapper.sh  aws-run-enclave.sh  aws-run-parent-proxy.sh  fetch-enclave-release.sh  run-ztdeploy.sh  smoke-api.ts
ztbrowser-chrome-extension/: attestationVerifier.mjs  background.js  content.js  manifest.json  popup.html  popup.js  trustedRoots.mjs
(+103 files in other folders)
