[package]
name = "ztbrowser-parent-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["io-util", "macros", "rt-multi-thread", "signal"] }
tokio-vsock = "0.7"
